Fix for to-do (module nav bar: "STATUE-esque" not centered vertically)
to-do https://basecamp.com/1759305/projects/1258511-collectorsquest-com/todos/20764515-ff-for-mac-theme#comment_31333475

--- a/web/less/frontend/modules/marketplace.less
+++ b/web/less/frontend/modules/marketplace.less
@@ -283,7 +283,7 @@ div.onecolumn {
 
       > a {
         height: 38px;
-        padding: 6px 40px;
+        padding: 6px 30px;
         font-size: 14px;
         line-height: 18px;
         text-align: center;
